--- a/admin/themes/default/css/style.css
+++ b/admin/themes/default/css/style.css
@@ -2155,6 +2155,9 @@ td {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 @media (max-width: 767px) {
   .action-links {
@@ -2166,25 +2169,15 @@ td {
   color: #003576;
 }
 .action-links li {
-  display: inline-block;
+  display: inline-flex;
 }
-.action-links li .spacer {
-  display: inline-block;
-}
-.action-links li .spacer:after {
-  content: " ·";
-  margin-left: 3px;
-  margin-right: 3px;
+.action-links li:not(:last-child):after {
+  content: "·"/"";
+  margin: 0 5px;
 }
 @media (max-width: 767px) {
-  .action-links li .spacer:after {
-    content: "";
-    margin: 0;
-  }
-}
-@media (max-width: 767px) {
-  .action-links li {
-    margin-bottom: 5px;
+  .action-links li:not(:last-child):after {
+    display: none;
   }
 }
 .action-links li:last-child:after {
@@ -2585,7 +2578,7 @@ ul.details li:last-child {
     color: #003576;
     background: #EEF3FA;
     border: 1px solid rgba(0, 53, 118, 0.25);
-    margin-bottom: 0;
+    margin: 0;
   }
   .browse .action-links a:hover, .browse .action-links a:focus {
     border-color: rgba(35, 35, 35, 0.65);
