--- a/admin/themes/default/css/sass/pages/_items.scss
+++ b/admin/themes/default/css/sass/pages/_items.scss
@@ -77,7 +77,7 @@
         @include button;
         @include small;
         @include blue;
-        margin-bottom: 0;
+        margin: 0;
     }
     
     .browse .action-links a.delete-confirm {
